tests/ui/parser/issues/issue-24780.stderr
error: expected one of `!`, `+`, `::`, `is`, `where`, or `{`, found `>`
  --> $DIR/issue-24780.rs:5:23
   |
LL | fn foo() -> Vec<usize>> {
   |                       ^ expected one of `!`, `+`, `::`, `is`, `where`, or `{`

error: aborting due to previous error

